fix: topbar getting squished

--- a/src/CardCreator/CardCreatorScreen.css
+++ b/src/CardCreator/CardCreatorScreen.css
@@ -1,7 +1,6 @@
 .cardCreatorScreen
 {
     display:flex;
-    width: 90vw;
 }
 @media only screen and (max-width: 900px) {
 
